[package]
name = "ron2json"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Convert ron files to json, yaml, or toml or vice versa"
tags = ["ron", "json", "yaml", "toml", "transcode"]
authors = ["Abhishek Shah <github.com/weezy20>"]
repository = "https://github.com/weezy20/r2"

[[bin]]
name = "r2"
path = "main.rs"

[[test]]
name = "conversion_tests"
path = "test.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ron = "0.12.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_yaml_bw = "2.5.1"
toml = "0.9.10"
